--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
     <title>Hello world!</title>
 </head>
 <body>
-    Hello world!!
+    <h1>Hello world!!</h1>
+    Я учусь работать с Git
 </body>
 </html>
